<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_home"/>
        <item
            android:id="@+id/nav_info_center"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_info_center"/>
        <item
            android:id="@+id/nav_countries"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_countries"/>
        <item
            android:id="@+id/nav_audios"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_audio"/>
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_video"/>
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_questions"/>
    </group>

</menu>
